[VEUE-669] header design fixes on mobile view

--- a/app/javascript/style/components/user_menu/mobile_friendly.scss
+++ b/app/javascript/style/components/user_menu/mobile_friendly.scss
@@ -4,7 +4,7 @@
 
 .menu-area[data-is-open="true"] {
   .user-menu[data-mode="mobile"] {
-    top: header.$height;
+    top: header.$mobile-height;
   }
 }
 
